--- a/docker/cosa/Dockerfile
+++ b/docker/cosa/Dockerfile
@@ -1,9 +1,9 @@
-# TAG dnastack/cosa:c7dc46d
+# TAG dnastack/cosa:c0a2fa8
 FROM ubuntu:bionic
 
 MAINTAINER Heather Ward <heather@dnastack.com>
 
-ENV COSA_GIT_HASH c7dc46d31b7142b1aae6f2c0387880374f3b020d
+ENV COSA_GIT_HASH c0a2fa8b538f226195d61f91b4fbfdaf41d9a99e
 ENV SAMTOOLS_VERSION 1.12
 ENV MINIMAP2_VERSION 2.18
 ENV BAMTOOLS_GIT_HASH de86007b944bba1e5305fcf8cf24e84262b5fcad
@@ -11,7 +11,7 @@ ENV BAMTOOLS_GIT_HASH de86007b944bba1e5305fcf8cf24e84262b5fcad
 RUN apt-get -qq update && \
 	apt-get -qq install \
 	git \
-	python3.7-dev \
+	python3.8-dev \
 	python3-pip \
 	python3-setuptools \
 	tabix \
@@ -28,13 +28,13 @@ RUN apt-get -qq update && \
 	libjsoncpp-dev
 
 # CoSA
+RUN python3.8 -m pip install pyvcf Cython
+
 RUN cd /opt && git clone https://github.com/PacificBiosciences/CoSA.git
 RUN cd /opt/CoSA && \
 	git checkout ${COSA_GIT_HASH} && \
-	python3.7 setup.py build && \
-	python3.7 setup.py install
-
-RUN python3.7 -m pip install pyvcf
+	python3.8 setup.py build && \
+	python3.8 setup.py install
 
 # Samtools
 RUN wget https://github.com/samtools/samtools/releases/download/${SAMTOOLS_VERSION}/samtools-${SAMTOOLS_VERSION}.tar.bz2 && \
